# work_update-rag

./: .gitignore  README.md  pyproject.toml  todo.txt
app/: main.py
app/core/: config.py  embeddings.py
app/models/: email.py
app/routers/: auth.py  gui.py  inbound.py  query.py
app/schemas/: api.py
app/services/: email_fetcher.py  llm.py  loader.py  search.py
app/static/: app.js  style.css
app/templates/: about.html  base.html  index.html  login.html
